# modern-python-package

./: .gitignore  404.html  README.md  environment.yml  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: python.yml
docs/specs/: checked-in-design.md
docs/specs/checked-in-design/: index.html
modern_python_package/: __init__.py
modern_python_package/cli/: __init__.py
modern_python_package/core/: __init__.py
reference/modern_python_package/: index.html
reference/modern_python_package/cli/: index.html
reference/modern_python_package/core/: index.html
search/: search_index.json
test/: __init__.py  test_cli.py  test_core.py
