# https://godatadriven.com/blog/minimal-pyproject-toml-example/
# https://peps.python.org/pep-0621/

[project]
name = "modern-python-package"
readme = "README.md"
version = "0.0.2"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas==2.1.1"
]
[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "build==1.0.3",
    "flake8==6.1.0",
    "Flake8-pyproject==1.2.3",
    "portray==1.8.0",
    "pylint==3.0.1",
    "pyright==1.1.329",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]

# https://stackoverflow.com/a/73066937
[project.scripts]
modern-python-cli = "modern_python_package.cli:main"

# https://github.com/PyCQA/flake8/issues/234
[tool.flake8]
max-line-length = 100

[tool.pylint]
good-names=["rv"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "--cov=modern_python_package --junitxml=coverage.xml --cov-fail-under=80"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
exclude = [
    "test/**"
]

[tool.portray.mkdocs]
markdown_extensions = [
    "pymdownx.emoji"
]

# Configure mkdocs:
# https://timothycrosley.github.io/portray/docs/quick_start/4.-configuration/
[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
