# https://godatadriven.com/blog/minimal-pyproject-toml-example/
# https://peps.python.org/pep-0621/

[project]
name = "modern-python-package"
readme = "README.md"
version = "0.0.3"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas==2.2.3"
]
[project.optional-dependencies]
dev = [
    "build==1.2.2.post1",
    "flake8==7.1.1",
    "Flake8-pyproject==1.2.3",
    "portray==1.8.0",
    "pylint==3.3.3",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

# https://stackoverflow.com/a/73066937
[project.scripts]
modern-python-cli = "modern_python_package.cli:main"

# https://github.com/PyCQA/flake8/issues/234
[tool.flake8]
max-line-length = 100

[tool.pylint]
good-names=["rv"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "--cov=modern_python_package --junitxml=coverage.xml --cov-fail-under=80"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
exclude = [
    "test/**"
]

[tool.portray.mkdocs]
markdown_extensions = [
    "pymdownx.emoji"
]

# Configure mkdocs:
# https://timothycrosley.github.io/portray/docs/quick_start/4.-configuration/
[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
